--- a/.github/workflows/dotnet-core.yml
+++ b/.github/workflows/dotnet-core.yml
@@ -17,10 +17,10 @@ jobs:
       with:
         dotnet-version: 3.1.102
     - name: Build
-      working-directory: ./Plachta.Client
+      working-directory: ./Plachta/Client
       run: dotnet build --configuration Release
     - name: Publish
-      working-directory: ./Plachta.Client
+      working-directory: ./Plachta/Client
       run: dotnet publish -c Release --no-build -o ../publish/
     - name: Fix publish
       working-directory: ./publish
