--- a/.github/workflows/dotnet-core.yml
+++ b/.github/workflows/dotnet-core.yml
@@ -21,7 +21,7 @@ jobs:
       run: dotnet build --configuration Release
     - name: Publish
       working-directory: ./Plachta/Client
-      run: dotnet publish -c Release --no-build -o ../publish/
+      run: dotnet publish -c Release --no-build -o ../../publish/
     - name: Fix publish
       working-directory: ./publish
       run: |
