--- a/Plachtovac/Client/Plachtovac.Client.csproj
+++ b/Plachtovac/Client/Plachtovac.Client.csproj
@@ -12,6 +12,7 @@
     <PackageReference Include="Blazor.ContextMenu" Version="1.6.0" />
     <PackageReference Include="Blazored.LocalStorage" Version="2.1.6" />
     <PackageReference Include="Blazored.Modal" Version="4.1.0" />
+    <PackageReference Include="Blazorise.Components" Version="0.9.0.3" />
     <PackageReference Include="Blazorise.Icons.FontAwesome" Version="0.9.0.3" />
     <PackageReference Include="Blazorise.Icons.Material" Version="0.9.0.3" />
     <PackageReference Include="Blazorise.Material" Version="0.9.0.3" />
