--- a/Plachtovac/Client/Plachtovac.Client.csproj
+++ b/Plachtovac/Client/Plachtovac.Client.csproj
@@ -1,30 +1,27 @@
-﻿<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.BlazorWebAssembly">
 
   <PropertyGroup>
-    <TargetFramework>netstandard2.1</TargetFramework>
-    <RazorLangVersion>3.0</RazorLangVersion>
-    <ServiceWorkerAssetsManifest>service-worker-assets.js</ServiceWorkerAssetsManifest>
+    <TargetFramework>net5.0</TargetFramework>
     <RootNamespace>Plachtovac.Client</RootNamespace>
     <AssemblyName>Plachtovac.Client</AssemblyName>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Blazor.ContextMenu" Version="1.6.0" />
-    <PackageReference Include="Blazored.LocalStorage" Version="2.1.6" />
-    <PackageReference Include="Blazored.Modal" Version="4.1.0" />
-    <PackageReference Include="Blazorise.Components" Version="0.9.0.3" />
-    <PackageReference Include="Blazorise.Icons.FontAwesome" Version="0.9.0.3" />
-    <PackageReference Include="Blazorise.Icons.Material" Version="0.9.0.3" />
-    <PackageReference Include="Blazorise.Material" Version="0.9.0.3" />
-    <PackageReference Include="Google.Apis.Drive.v3" Version="1.46.0.1975" />
-    <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="3.2.0" />
-    <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.Build" Version="3.2.0" PrivateAssets="all" />
-    <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="3.2.0" PrivateAssets="all" />
-    <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.Authentication" Version="3.2.0" />
-    <PackageReference Include="System.Linq.Async" Version="4.1.1" />
-    <PackageReference Include="System.Net.Http.Json" Version="3.2.1" />
-    <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
-    <PackageReference Include="Tewr.Blazor.FileReader" Version="1.6.0.20166" />
+    <PackageReference Include="Blazor.ContextMenu" Version="1.9.0" />
+    <PackageReference Include="Blazored.LocalStorage" Version="4.1.2" />
+    <PackageReference Include="Blazored.Modal" Version="6.0.1" />
+    <PackageReference Include="Blazorise.Components" Version="0.9.3.9" />
+    <PackageReference Include="Blazorise.Icons.FontAwesome" Version="0.9.3.9" />
+    <PackageReference Include="Blazorise.Icons.Material" Version="0.9.3.9" />
+    <PackageReference Include="Blazorise.Material" Version="0.9.3.9" />
+    <PackageReference Include="Google.Apis.Drive.v3" Version="1.52.0.2354" />
+    <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="5.0.7" />
+    <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="5.0.7" PrivateAssets="all" />
+    <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.Authentication" Version="5.0.7" />
+    <PackageReference Include="System.Linq.Async" Version="5.0.0" />
+    <PackageReference Include="System.Net.Http.Json" Version="5.0.0" />
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
+    <PackageReference Include="Tewr.Blazor.FileReader" Version="3.1.0.21158" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Shared\Plachtovac.Shared.csproj" />
