--- a/.github/workflows/dotnet-core.yml
+++ b/.github/workflows/dotnet-core.yml
@@ -15,7 +15,7 @@ jobs:
     - name: Setup .NET Core
       uses: actions/setup-dotnet@v1
       with:
-        dotnet-version: 5.0.7
+        dotnet-version: 5.0.x
     - name: Build
       working-directory: ./Plachtovac/Client
       run: dotnet build --configuration Release
