--- a/Plachtovac/Client/wwwroot/manifest.json
+++ b/Plachtovac/Client/wwwroot/manifest.json
@@ -5,6 +5,7 @@
   "display": "standalone",
   "background_color": "#ecf0f1",
   "theme_color": "#2980b9",
+  "scope": ".",
   "icons": [
     {
       "src": "icon.png",
