--- a/Plachtovac/Client/Plachtovac.Client.csproj
+++ b/Plachtovac/Client/Plachtovac.Client.csproj
@@ -4,6 +4,7 @@
     <TargetFramework>net5.0</TargetFramework>
     <RootNamespace>Plachtovac.Client</RootNamespace>
     <AssemblyName>Plachtovac.Client</AssemblyName>
+    <ServiceWorkerAssetsManifest>service-worker-assets.js</ServiceWorkerAssetsManifest>
   </PropertyGroup>
 
   <ItemGroup>
